# mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
docs/: api.md  environment_setup.md
src/: __init__.py
src/mcp_server/: __init__.py  config.py  main.py
tests/: __init__.py  test_health.py
